# magicalworld

./: .env.template  .gitignore  README.md  requirements.txt  setup.py  twitter_translator.py
backend/ai_battle_api/: .env  .env.example  README.md  alembic.ini  pyproject.toml  test_battle.py
backend/ai_battle_api/alembic/: env.py
backend/ai_battle_api/alembic/versions/: 3c6adeed28ca_add_battles_table.py
backend/ai_battle_api/app/: main.py  models.py  services.py
backend/ai_battle_api/app/database/: __init__.py
frontend/ai_battle_frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/ai_battle_frontend/public/assets/: index-DUXFXM4P.css  index-fp8RsRD_.js
frontend/ai_battle_frontend/src/: App.tsx
frontend/ai_battle_frontend/src/components/: BattleArena.tsx
scripts/: generate_characters.py  optimize_images.py  pyproject.toml
src/: analyze_tweets.py  bot.py  llm.py  logger.py  market_context.py  mock_data.py  run_bot.py  run_continuous.py  style_slang.py
src/config/: config.py
tests/: check_lists.py  test_gpt4.py  test_list_access.py  test_llm.py  test_market_context.py  test_monitoring.py  test_presence_penalty.py  test_single_tweet.py  test_style_matching.py  test_style_slang.py  verify_env.py
